--- a/FRONTEND/src/app/register/register.component.html
+++ b/FRONTEND/src/app/register/register.component.html
@@ -6,7 +6,7 @@
         <p class="text-white fs-2 text-center">Author already existed</p>
     </div>
 
-    <!-- <p class="display-6 text-center text-dark" style="font-weight: 300;">REGISTER</p> -->
+    <p class="display-4 text-center text-dark" style="font-weight: 800;">REGISTER</p>
 
     <div class="container">
         <form class="w-50 mx-auto" [formGroup]="registerForm" (ngSubmit)="onSubmit()" #ref="ngForm">
@@ -32,7 +32,7 @@
             </div>
 
             <div class="mb-3">
-                <label for="lastName" class="form-label">Last Name</label>
+                <label for="lastName" class="form-label">Name</label>
                 <input type="text" id="lastName" class="form-control" formControlName="lastName">
             </div>
 
