--- a/FRONTEND/src/app/book-ticket/book-ticket.component.html
+++ b/FRONTEND/src/app/book-ticket/book-ticket.component.html
@@ -1,16 +1,19 @@
 
+
+
 <h1>Ticket Booking</h1>
 <div class="container1">
  <div class="container">
-  <div class=" column1">
-    <form class="row" [formGroup]="ticketBookingForm" (ngSubmit)="bookingFunction()">
+  <div class="column1">
+    <form [formGroup]="ticketBookingForm" (ngSubmit)="bookingFunction()">
       <div [ngClass]="className" role="alert">
         {{ message }} <a routerLink="/login" style="cursor: pointer;"></a>
       </div>
         <p>{{email}}</p>
         <h2 name="title" class="card-title text-white">Movie: {{ movies.movieName }}</h2>
-        <img class="col-lg-3" [src]="movies.image" class="card-img-top" style="height: 30rem;" alt="images"/>
-        <p name="overview">{{ movieOverview }}</p>
+        <img [src]="movies.image" class="card-img-top" style="width: 25rem;" alt="images"/><br>
+        <!-- <label>Overview:</label> <br>
+        <p name="overview">{{ movieOverview }}</p> -->
         <label>Show Timings:</label><br>
         <div class="time">09:00AM</div>
         <div class="time">12:00PM</div>
@@ -19,18 +22,18 @@
         <br>
         <hr>
         <label>Select a show time: </label>
-        <select formControlName="showTime" style="width: 650px;" name="tickets" class="form-control" id="showTime" [ngClass]="{'is-invalid': submitted && ticketBookingForm.controls['showTime'].errors}">
-            <option style="font-size: large;" value="09:00AM">09:00AM</option>
-            <option style="font-size: large;" value="12:00AM">12:00PM</option>
-            <option style="font-size: large;" value="04:00AM">04:00PM</option>
-            <option style="font-size: large;" value="10:30AM">10:30PM</option>
+        <select formControlName="showTime" class="form-control" name="tickets" id="showTime" [ngClass]="{'is-invalid': submitted && ticketBookingForm.controls['showTime'].errors}">
+            <option value="09:00AM">09:00AM</option>
+            <option value="12:00AM">12:00PM</option>
+            <option value="04:00AM">04:00PM</option>
+            <option value="10:30AM">10:30PM</option>
         </select><br>
         <div *ngIf="submitted && ticketBookingForm.controls['showTime'].errors" class="text-danger">
             <div *ngIf="submitted && ticketBookingForm.controls['showTime'].errors['required']">
                 Select a show timing
             </div>
          </div>
-        <label class="form-label" >Number of Tickets:</label> <select formControlName="noOfTickets" class="form-control" style="width: 650px;" name="tickets" id="tickets" (change)="ticketSelectedChange($event)" [ngClass]="{'is-invalid': submitted && ticketBookingForm.controls['noOfTickets'].errors}">
+        <label>Number of Tickets:</label> <select class="form-control" formControlName="noOfTickets" name="tickets" id="tickets" (change)="ticketSelectedChange($event)" [ngClass]="{'is-invalid': submitted && ticketBookingForm.controls['noOfTickets'].errors}">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -42,18 +45,18 @@
             <option value="9">9</option>
             <option value="10">10</option>
         </select><br>
-        <div class="col-lg-4" *ngIf="submitted && ticketBookingForm.controls['noOfTickets'].errors" class="text-danger">
+        <div *ngIf="submitted && ticketBookingForm.controls['noOfTickets'].errors" class="text-danger">
             <div *ngIf="submitted && ticketBookingForm.controls['noOfTickets'].errors['required']">
                 Choose no. of tickets
             </div>
          </div>
-        <label class="form-label">Ticket Price: </label><span style="font-size: large;">₹ {{movies.price}}/Ticket</span><br>
-        <label class="form-label">Seat Number: </label><span  style="font-size: large;" id="text"></span><br>
+        <label>Ticket Price: </label><span>₹{{movies.price}}/Ticket</span><br>
+        <label>Seat Number: </label><span id="text"></span><br>
        
-        <label style="color:black; background-color:white; font-size: 25px; padding: 5px;">Total Ticket Price: ₹<b><span id="total" style="font-size: 25px;"></span></b></label><br> 
+        <label style="color: white; background-color: rgb(12, 136, 119); font-size: 25px; padding: 5px;">Total Ticket Price: ₹<b><span id="total" style="font-size: 25px;"></span></b></label><br> 
         
     
-        <button class="btn btn-success">Proceed To Pay</button>
+        <button class="btn btn-success">Book Ticket</button>
         
         
         </form>
@@ -63,15 +66,15 @@
         <ul class="showcase">
             <li>
                 <div class="seat"></div>
-                <small style="font-size: large;">Not Selected</small>
+                <small>Not Selected</small>
             </li>
             <li>
                 <div class="seat Selected"></div>
-                <small style="font-size: large;">Selected</small>
+                <small>Selected</small>
             </li>
             <li>
                 <div class="seat Occupied"></div>
-                <small style="font-size: large;">Already Occupied</small>
+                <small>Already Occupied</small>
             </li>
         </ul>
 
@@ -160,7 +163,7 @@
                 <div class="seat"></div>
                 <div class="seat"></div>
             </div>
-            <label>You have selected <span id="countS" style="color:antiquewhite; width: 20px; background-color:rgb(22, 131, 125); font-size: 30px;"></span> Seats</label>
+            <label>You have selected <span id="countS" style="color:antiquewhite; background-color:aquamarine; font-size: 30px;"></span> Seats</label>
         </div>
         </div>
 </div>
