--- a/FRONTEND/src/app/movies/movies.component.html
+++ b/FRONTEND/src/app/movies/movies.component.html
@@ -19,7 +19,7 @@
              <h5 class="card-title mt-2" style="text-align:center;">{{ movie.movieName }}</h5>
               
               @if(!isUser){
-                 <div class="container mb-2">
+                 <div class="container">
                   <div class="row">
                     <div class="col">
                       <button  class="update-btn "  (click)="openForm(movie.movieName)">Update Status</button>
@@ -43,7 +43,7 @@
                }
 
             }@else{
-              <img [src]="movie.image" class="card-img-top" (click)="login()" alt="movie Image" height="530px" width="25px" >
+              <img [src]="movie.image" class="card-img-top" (click)="login()" alt="movie Image" style="cursor: pointer;" height="530px" width="25px" >
             <h5 class="card-title mt-2" style="text-align:center;">{{ movie.movieName }}</h5>
             }
          
